[gd_scene load_steps=10 format=2]

[ext_resource path="res://examples/example.tscn" type="PackedScene" id=1]
[ext_resource path="res://examples/gesture-detection/gesture_detection_example.gd" type="Script" id=2]
[ext_resource path="res://addons/swipe-detector/swipe_detector.gd" type="Script" id=3]
[ext_resource path="res://addons/swipe-detector/icon.png" type="Texture" id=4]
[ext_resource path="res://examples/gesture-detection/trail-particle.png" type="Texture" id=5]
[ext_resource path="res://examples/gesture-detection/trail_ghost.tscn" type="PackedScene" id=6]

[node name="GestureDetectionExample" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="RecordedGesture" type="Node2D" parent="."]


[node name="MatchGesture" type="Node2D" parent="."]


[node name="RecordingLabel" type="Label" parent="."]

visible = false
rect_scale = Vector2( 3, 3 )
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 367.0
margin_top = 281.0
margin_right = 450.0
margin_bottom = 295.0
text = "Recording..."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SwipeDetector" type="Node" parent="."]

script = ExtResource( 3 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
detect_gesture = true
process_method = null
distance_threshold = 80.0
duration_threshold = 0.05
limit_duration = false
maximum_duration = -1.0
minimum_points = 3
limit_points = false
maximum_points = -1
pattern_detection_score_threshold = 80
debug_mode = false

[node name="RecordButton" type="Button" parent="."]

rect_scale = Vector2( 2, 2 )
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 707.0
margin_top = 550.0
margin_right = 818.0
margin_bottom = 579.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Record Gesture"
flat = false

[node name="Trail" type="Particles2D" parent="."]

position = Vector2( -118.912, 157.892 )
config/amount = 32
config/lifetime = 0.2
config/emitting = false
config/local_space = false
config/texture = ExtResource( 5 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 1, 0.609375, 0, 1 )

[node name="TrailGhost" parent="." instance=ExtResource( 6 )]

position = Vector2( 670.529, 580.305 )
self_modulate = Color( 0.898438, 0.765076, 0.765076, 1 )

[node name="Match" type="VBoxContainer" parent="."]

editor/display_folded = true
visible = false
rect_scale = Vector2( 2, 2 )
focus_ignore_mouse = false
focus_stop_mouse = false
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 18.0
margin_top = 529.0
margin_right = 112.0
margin_bottom = 567.0
custom_constants/separation = 10
alignment = 0

[node name="ResultLabel" type="Label" parent="Match"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = -2.0
margin_top = 28.0
margin_right = 104.0
margin_bottom = 42.0
text = "Match Detected!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pattern_detected"  from="SwipeDetector"  to="." method="_on_SwipeDetector_pattern_detected" binds=[  ]]

[connection signal="swipe_ended"  from="SwipeDetector"  to="." method="_on_SwipeDetector_swipe_ended" binds=[  ]]

[connection signal="swipe_started"  from="SwipeDetector"  to="." method="_on_SwipeDetector_swipe_started" binds=[  ]]

[connection signal="swipe_updated"  from="SwipeDetector"  to="." method="_on_SwipeDetector_swipe_updated" binds=[  ]]

[connection signal="pressed"  from="RecordButton"  to="." method="_on_RecordButton_pressed" binds=[  ]]
