[gd_scene load_steps=7 format=1]

[ext_resource path="res://examples/swipe-impulse/SwipeSmoothImpulseExample.gd" type="Script" id=1]
[ext_resource path="res://examples/swipe-impulse/TouchPoint.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/swipe-detector/swipe_detector.gd" type="Script" id=3]
[ext_resource path="res://addons/swipe-detector/icon.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 328.79 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 542.398, 9.47275 )

[node name="SwipeTouchImpulseExample" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 215.0
margin/bottom = 24.0
text = "Swipe Touch Smooth Impulse Example"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Points" type="Node2D" parent="."]

[node name="TouchPoint" parent="Points" instance=ExtResource( 2 )]

transform/pos = Vector2( 207.105, 186.6 )

[node name="TouchPoint1" parent="Points" instance=ExtResource( 2 )]

transform/pos = Vector2( 771.005, 112.78 )

[node name="TouchPoint2" parent="Points" instance=ExtResource( 2 )]

transform/pos = Vector2( 586.456, 385.503 )

[node name="TouchPoint3" parent="Points" instance=ExtResource( 2 )]

transform/pos = Vector2( 826.37, 352.694 )

[node name="TouchPoint4" parent="Points" instance=ExtResource( 2 )]

transform/pos = Vector2( 164.044, 485.979 )

[node name="Bounds" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -11.3615, 302.303 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 1033.13, 302.303 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 2 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 513.074, -9.11526 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 2 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 517.226, 610.986 )
shapes/3/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="VerticalBound" type="CollisionShape2D" parent="Bounds"]

transform/pos = Vector2( -11.3615, 302.303 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="VerticalBound1" type="CollisionShape2D" parent="Bounds"]

transform/pos = Vector2( 1033.13, 302.303 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1

[node name="HorizontalBound" type="CollisionShape2D" parent="Bounds"]

transform/pos = Vector2( 513.074, -9.11526 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 2

[node name="HorizontalBound1" type="CollisionShape2D" parent="Bounds"]

transform/pos = Vector2( 517.226, 610.986 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 3

[node name="SwipeDetector" type="Node" parent="."]

script/script = ExtResource( 3 )
__meta__ = { "_editor_icon":ExtResource( 4 ) }
detect_gesture = true
process_method = "Fixed"
distance_threshold = 10.0
duration_threshold = 0.02
limit_duration = false
maximum_duration = -1.0
minimum_points = 2
limit_points = false
maximum_points = -1
pattern_detection_score_threshold = 80
debug_mode = false

[connection signal="swipe_started" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_started"]

[connection signal="swipe_updated_with_delta" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_updated_with_delta"]


